# medalPredictorModel

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  SUMMARY.md  evaluation_results.pkl  feature_names.pkl  features_X.pkl  model_metadata.pkl  notebook_1_setup.ipynb  notebook_2_eda_features.ipynb  notebook_3_model_dev.ipynb  notebook_3_results.ipynb  notebook_4_visualisation.ipynb  notebook_4_visualization.ipynb  olympic_data_raw.pkl  olympic_medal_predictor_gb.pkl  olympic_ml_notebook.ipynb  pyproject.toml  target_y.pkl
.github/workflows/: ci.yml
src/medal_predictor/: __init__.py  betting.py  cv.py  data.py  evaluation.py  features.py  leakage.py  model.py
tests/: test_betting.py  test_cv.py  test_data.py  test_evaluation.py  test_features.py  test_import.py  test_leakage.py  test_model.py
